--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Exo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap");
+
 body {
   background-color: #112327;
   font-family: "Kanit", sans-serif;
@@ -32,11 +35,11 @@ input {
   color: white;
 }
 input[type="text"] {
-  font-family: "Kanit", sans-serif;
+  font-family: "Slabo 27px", serif;
 }
 input::placeholder {
   color: white;
-  font-family: "Kanit", sans-serif;
+  font-family: "Slabo 27px", serif;
 }
 
 ul {
@@ -58,7 +61,8 @@ ul {
 
 .greetings {
   margin-top: 2rem;
-  font-size: 30px;
+  font-size: 40px;
+  font-family: "Slabo 27px", serif;
 }
 
 .showing {
